# agentes_programas

./: README.md  main.py  pyproject.toml
notebooks/: agentes_de_analisis.py  buscador.ipynb  buscador_ejemplo.ipynb  buscador_programas.py  estado.py  evaluador_expresiones.py  lector.py  programa.ipynb
notebooks/salida/: final_state.json
