[project]
name = "agentes-programas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.12",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
